<resources>
    <string name="app_name">Clamp</string>


    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="new_status_btn_hint">Post Status</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_save">Save</string>
    <string name="bottom_delete">Delete</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_ac_text">Account</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_followers">Follows</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>











</resources>
